# labscript-qc-example

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  common_functions.py  config.py  connection_table.py  example_experiment.py  header.py  maintainer.py  pyproject.toml  requirements.txt  spooler.py  test_mot.py
.github/workflows/: spooler_tests.yml
